<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_nav"
    android:label="Authentication"
    tools:showIn="navigation_view"
    app:startDestination="@id/splashFragment">
    <fragment
        android:id="@+id/splashFragment"
        android:name="id.exomatik.absenki.ui.auth.splash.SplashFragment"
        android:label="@string/splash_screen"
        tools:layout="@layout/fragment_splash" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="id.exomatik.absenki.ui.auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="id.exomatik.absenki.ui.auth.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register"
        />
    <fragment
        android:id="@+id/lihatFotoFragment"
        android:name="id.exomatik.absenki.utils.LihatFotoFragment"
        android:label="@string/foto"
        tools:layout="@layout/fragment_lihat_foto"
        />
    <fragment
        android:id="@+id/verifyRegisterFragment"
        android:name="id.exomatik.absenki.ui.auth.verifyRegister.VerifyRegisterFragment"
        android:label="fragment_verify_register"
        tools:layout="@layout/fragment_verify_register" />
    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="id.exomatik.absenki.ui.auth.changePassword.ChangePasswordFragment"
        android:label="fragment_change_password"
        tools:layout="@layout/fragment_change_password" />
    <fragment
        android:id="@+id/forgetPasswordFragment"
        android:name="id.exomatik.absenki.ui.auth.forgetPassword.ForgetPasswordFragment"
        android:label="fragment_forget_password"
        tools:layout="@layout/fragment_forget_password" />
    <fragment
        android:id="@+id/verifyForgetPasswordFragment"
        android:name="id.exomatik.absenki.ui.auth.verifyForgetPassword.VerifyForgetPasswordFragment"
        android:label="fragment_verify_forget_password"
        tools:layout="@layout/fragment_verify_forget_password" />
</navigation>