<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="id.exomatik.absenasn.ui.auth.RegisterActivity"
    >
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/CustomStyle"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/h2"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                style="@style/textStandardWhite"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="35sp"
                android:textStyle="bold"
                android:fontFamily="@font/black_stroke"
                android:textAlignment="textStart"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textStandardWhite"
                android:textSize="@dimen/text_h2"
                android:layout_marginTop="@dimen/h2"
                android:textAlignment="textStart"
                android:textColor="@color/gray2"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/silahkan_mendaftar_untuk_melanjutkan"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/cardFotoProfil"
                style="@style/cardView"
                android:layout_gravity="center"
                android:layout_width="@dimen/_150"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h3"
                android:layout_marginStart="@dimen/h1"
                android:layout_marginEnd="@dimen/h1"
                android:layout_marginBottom="@dimen/h3"
                >
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_140"
                        android:background="@color/gray1"
                        android:src="@drawable/ic_camera_white"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/imgFotoProfil"
                        android:scaleType="centerCrop"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:text="@string/foto_profil"
                        android:layout_marginTop="@dimen/h2"
                        android:layout_marginBottom="@dimen/h2"
                        />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/customEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_marginTop="@dimen/h2"
                android:textColorHint="@color/gray2"
                app:errorEnabled="true"
                app:counterMaxLength="25"
                app:counterEnabled="true"
                android:id="@+id/etUsername"
                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStandardWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:text="@={viewModel.etUsername}"
                    android:digits="@string/digitsUsername"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/customEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kata_sandi"
                android:textColorHint="@color/gray2"
                android:layout_marginTop="@dimen/h2"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                android:id="@+id/etPassword"
                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStandardWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_h3"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/customEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/konfirmasi_kata_sandi"
                android:textColorHint="@color/gray2"
                android:layout_marginTop="@dimen/h2"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                android:id="@+id/etConfirmPassword"
                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStandardWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_h3"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/customEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_lengkap"
                android:textColorHint="@color/gray2"
                android:layout_marginTop="@dimen/h2"
                app:errorEnabled="true"
                android:id="@+id/etNamaLengkap"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStandardWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/rgJK"
                android:gravity="center_horizontal"
                >
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:button="@drawable/btn_radio"
                    style="@style/Theme.MaterialComponents"
                    android:layout_marginEnd="@dimen/h5"
                    android:layout_marginStart="@dimen/h2"
                    android:textColor="@color/gray2"
                    android:textSize="@dimen/text_h4"
                    android:text="@string/laki_laki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbJk1"
                    />
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:button="@drawable/btn_radio"
                    style="@style/Theme.MaterialComponents"
                    android:textSize="@dimen/text_h4"
                    android:textColor="@color/gray2"
                    android:text="@string/perempuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbJk2"
                    android:layout_marginStart="@dimen/h5"
                    android:layout_marginEnd="@dimen/h2"
                    />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/customEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alamat"
                android:textColorHint="@color/gray2"
                android:layout_marginTop="@dimen/h2"
                app:errorEnabled="true"
                android:id="@+id/etAlamat"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStandardWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/customEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tempat_lahir"
                android:textColorHint="@color/gray2"
                android:layout_marginTop="@dimen/h2"
                app:errorEnabled="true"
                android:id="@+id/etTempatLahir"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStandardWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h2"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btnTglLahir"
                    android:background="@android:color/transparent"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/customEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pilih_tanggal_lahir"
                    android:textColorHint="@color/gray2"
                    app:errorEnabled="true"
                    android:id="@+id/etTglLahir"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/textStandardWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/h2"
                        android:inputType="textCapSentences"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/customEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nomor_hp_contoh_0813xxxx"
                android:textColorHint="@color/gray2"
                android:layout_marginTop="@dimen/h2"
                app:errorEnabled="true"
                app:counterMaxLength="13"
                app:counterEnabled="true"
                android:id="@+id/etNoHp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStandardWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:maxLength="13"
                    android:digits="@string/digitsPhone"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textStandardWhite"
                android:textSize="@dimen/text_h3"
                android:textColor="@color/gray2"
                android:layout_marginTop="@dimen/h2"
                android:layout_marginBottom="@dimen/h2"
                android:layout_marginLeft="@dimen/_30"
                android:layout_marginRight="@dimen/_30"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_regular"
                android:id="@+id/textStatus"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                style="@style/buttonStandardGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/h5"
                android:layout_marginTop="@dimen/_40"
                android:layout_marginRight="@dimen/h5"
                android:padding="@dimen/h3"
                android:textSize="@dimen/text_h2"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textAlignment="center"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/viewHaveAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogin"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/h3"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textHaveAkun"
                    style="@style/textStandardWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnLogin"
                    android:layout_alignParentEnd="true"
                    android:text="@string/sudah_punya_akun"
                    android:textColor="@color/gray3"
                    android:textSize="@dimen/text_h2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textLogin"
                    style="@style/textStandardWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnLogin"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/h1"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_h2"
                    android:textStyle="bold"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/progress_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_centerInParent="true"
        />
</RelativeLayout>
